fix: set body height

--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,16 @@
 		%sveltekit.head%
 		
 		<style>
-			html, body {
+			html {
+				height: 100%;
+			}
+			body {
 				color: #efeff1;
 				background-color: #0e0e10;
+				min-height: 100%;
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
 			}
 		</style>
 	</head>
