feat: move chat to separate component

--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,9 @@
 				padding: 0;
 				box-sizing: border-box;
 			}
+			.message-text {
+				white-space: pre-wrap;
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
