feat: improved channel list styling

--- a/src/app.html
+++ b/src/app.html
@@ -7,17 +7,25 @@
 		%sveltekit.head%
 		
 		<style>
+			:root {
+				--text-color: #efeff1;
+				--background-color: #0e0e10;
+				
+				--scrollbar-color: #000000;
+				--scrollbar-thumb-color: #F5F5F5;
+			}
+			
 			::-webkit-scrollbar-track {
-				background-color: #000000;
+				background-color: var(--scrollbar-color);
 			}
 
 			::-webkit-scrollbar {
 				width: 10px;
-				background-color: #000000;
+				background-color: var(--scrollbar-color);
 			}
 
 			::-webkit-scrollbar-thumb {
-				background-color: #F5F5F5;
+				background-color: var(--scrollbar-thumb-color);
 			}
 
 			html {
@@ -25,8 +33,8 @@
 			}
 
 			body {
-				color: #efeff1;
-				background-color: #0e0e10;
+				color: var(--text-color);
+				background-color: var(--background-color);
 				min-height: 100%;
 				margin: 0;
 				padding: 0;
