--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,11 @@
 		<style>
 			:root {
 				--text-color: #efeff1;
+				--text-size: 25px;
+				--font-family: 'Roboto', sans-serif;
 				--background-color: #0e0e10;
+				
+				--twitch-purple: #9146ff;
 				
 				--scrollbar-color: #000000;
 				--scrollbar-thumb-color: #F5F5F5;
