--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,7 @@
 				--background-color: #0e0e10;
 				
 				--twitch-purple: #9146ff;
+				--twitch-font-family: Inter, Roobert, "Helvetica Neue", Helvetica, Arial, sans-serif;
 				
 				--scrollbar-color: #000000;
 				--scrollbar-thumb-color: #F5F5F5;
@@ -37,6 +38,7 @@
 			}
 
 			body {
+				font-family: var(--twitch-font-family);
 				color: var(--text-color);
 				background-color: var(--background-color);
 				min-height: 100%;
